--- a/language/java-jvm/运行时数据区域--5--方法区.md
+++ b/language/java-jvm/运行时数据区域--5--方法区.md
@@ -10,5 +10,5 @@
   
 
 对上面的描述进行总结，有以下几点可以着重记住：
-2. 这个区域是`多线程私共享`   
-4. 存储已被虚拟机加载的`类信息`、`常量`、`静态变量`
+1. 这个区域是`多线程共享`   
+2. 存储已被虚拟机加载的`类信息`、`常量`、`静态变量`
